Display block was added to footer to fix overlappig

--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -3,7 +3,6 @@
     margin: auto;
     height: 110vh;
     margin-top: 36px;
-    margin-bottom: 100px;
 }
 h2 {
     text-align: center;
