--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,15 +1,14 @@
 footer {
     width: 100vw;
-    display: flex;
+    display: block;
     text-align: center;
     color: rgb(255, 249, 249);
     font-size: 14px;
-    position: relative;
-    margin-top: 100px;
+    // position: relative;
     .footer__wrapper {
         background-color: rgba(11, 61, 97, 0.9);
+        // height: 120%;
         width: 100%;
-
     }
 
     .wrapper__p {
